[package]
name = "anno-rag-tabular"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Harvey/Legora-style tabular review for anno-rag — schema-driven extraction with per-cell citations."

[features]
# Enable the live GLiNER2/Fastino entity-extraction adapter.
# Adds anno::GLiNEROnnx as the LocalEntityExtractor implementation.
# Ignored by default so CI never downloads model weights.
gliner2 = ["dep:anno"]
# Exposes `*_for_tests` constructors to downstream integration tests.
test-utils = []
# Within-boundary vision-OCR via liter-llm (MIT, Rust-native). Off by default.
# Routes to any OpenAI-compat endpoint: co-located vLLM (on-prem GPU)
# or llama-server GGUF (desktop) — configured via vlm_vllm_url / vlm_local_url.
vlm-ocr = ["dep:liter-llm"]

[dependencies]
# Single-crate workspace today — pulls in detector, vault, store, embed, audit.
# Replaces the plan's anno-rag-core / -store / -embed / -audit deps.
anno-rag           = { path = "../anno-rag" }
anno               = { path = "../anno", features = ["gliner2-fastino"], optional = true }
liter-llm          = { workspace = true, optional = true }

tokio              = { workspace = true }
async-trait        = "0.1"
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
lancedb            = { workspace = true }
arrow              = { workspace = true }
arrow-array        = { workspace = true }
arrow-schema       = { workspace = true }
sha2               = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
futures            = { workspace = true }
keyring            = { workspace = true }

rust_xlsxwriter    = "0.95"
csv                = "1"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile           = "3"
insta              = { version = "1", features = ["yaml"] }
proptest           = "1"
zip                = "2"

[lints]
workspace = true
