[package]
name         = "anno-rag"
version      = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "Local GDPR-compliant document anonymizer + RAG service (French legal)"

[features]
default = []
# Enables the `--enable-ocr` fork-to-system-tesseract runtime path.
# No effect on linked code — the OCR module always compiles (it's a thin
# tokio::process wrapper); the flag is informational/feature-gated docs.
ocr = []
# Opt-in cross-encoder reranker (BGE-reranker-v2-m3 INT8 ONNX, ~571 MB
# download on first use). Pulls ort + ndarray. Default off so plain
# `cargo install anno-rag` users don't pay the model download.
rerank = ["dep:ort", "dep:ndarray", "dep:is-terminal"]

[dependencies]
anno            = { path = "../anno", features = ["gliner2-fastino"] }
cloakpipe-core  = { path = "../../vendor/cloakpipe/crates/cloakpipe-core" }

kreuzberg            = { workspace = true }
lancedb              = { workspace = true }
# `lance-index` is a transitive dep of lancedb; declared explicitly because
# `FullTextSearchQuery` (used by the hybrid search path) is not re-exported
# by lancedb 0.27.2. Pinned to the version lancedb 0.27.2 resolves.
lance-index          = "=6.0.0"
arrow                = { workspace = true }
arrow-array          = { workspace = true }
arrow-schema        = { workspace = true }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
candle-transformers  = { workspace = true }
ort                  = { workspace = true, features = ["ndarray"], optional = true }
ndarray              = { workspace = true, optional = true }
is-terminal          = { version = "0.4", optional = true }
hf-hub               = { workspace = true }
tokenizers           = { workspace = true }
tokio                = { workspace = true }
clap                 = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
schemars             = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = { workspace = true }
thiserror            = { workspace = true }
uuid                 = { workspace = true }
regex                = { workspace = true }
walkdir              = { workspace = true }
sha2                 = { workspace = true }
futures              = { workspace = true }
argon2               = { workspace = true }
keyring              = { workspace = true }
rand                 = { workspace = true }
dirs                 = { workspace = true }
chrono               = { workspace = true }
csv                  = "1"
unicode-normalization = "0.1"
sysinfo              = "0.32"
tempfile             = "3"

[dev-dependencies]
insta           = { version = "1", features = ["yaml"] }
criterion       = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest        = "1"

[[bench]]
name = "bench_cold_start"
harness = false

[[bench]]
name = "bench_idle_rss"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_ingest"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_rerank"
harness = false
required-features = ["rerank"]

[[bench]]
name = "bench_rerank_eval"
harness = false
required-features = ["rerank"]

[[bench]]
name = "bench_memory_recall"
harness = false

[lints]
workspace = true
