[package]
name         = "anno-rag"
version      = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license      = "MIT OR Apache-2.0"
description  = "Local GDPR-compliant document anonymizer + RAG service (French legal)"

[features]
default = ["heuristic-fr", "embedded-ocr", "rerank"]
heuristic-fr = ["anno/heuristic-fr"]
generate-schema = []
# Opt-in gate for heavy integration tests that require model downloads + LanceDB.
# These tests are #[ignore]'d by default; compile them with:
#   cargo test -p anno-rag --features dev-integration --test <name> -- --ignored
dev-integration = []
# Apple Silicon Metal acceleration for Candle-backed embedder/detector paths.
gpu-metal = ["anno/gliner2-fastino-candle-metal", "anno/metal"]
# Windows/Linux NVIDIA CUDA acceleration for ONNX-backed detector paths.
gpu-cuda = ["anno/gliner2-fastino-cuda"]
# CPU-only Candle backend for the GLiNER2-Fastino detector (no GPU required).
# Enables the Candle DeBERTa encoder path on any x86_64/aarch64 host.
gliner2-candle-cpu = ["anno/gliner2-fastino-candle"]
# Cross-encoder reranker (BGE-reranker-v2-m3 INT8 ONNX, ~571 MB download on
# first use). In default features so the distributed binary always reranks.
rerank = ["dep:ort", "dep:ndarray", "dep:is-terminal"]
# Embedded Kreuzberg/Tesseract OCR. In default features so the distributed
# binary supports scanned PDFs. Runtime default is ocr_mode = auto_embedded.
embedded-ocr = ["kreuzberg/ocr"]
# Adds PaddleOCR as an automatic quality-based fallback behind Tesseract.
# Requires `embedded-ocr`. kreuzberg's `effective_pipeline()` auto-constructs
# a [tesseract@100, paddleocr@50] pipeline when this feature is active.
ocr-paddle = ["kreuzberg/paddle-ocr", "kreuzberg/ocr"]

[dependencies]
anno            = { path = "../anno", features = ["gliner2-fastino"] }
anno-config-meta = { path = "../anno-config-meta" }
anno-corpus-core = { workspace = true }
anno-knowledge-core = { path = "../anno-knowledge-core" }
cloakpipe-core  = { path = "../../vendor/cloakpipe/crates/cloakpipe-core" }

kreuzberg            = { workspace = true }
lancedb              = { workspace = true }
# `lance-index` is a transitive dep of lancedb; declared explicitly because
# `FullTextSearchQuery` (used by the hybrid search path) is not re-exported
# by lancedb 0.27.2. Pinned to the version lancedb 0.27.2 resolves.
lance-index          = "=6.0.0"
arrow                = { workspace = true }
arrow-array          = { workspace = true }
arrow-schema        = { workspace = true }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
candle-transformers  = { workspace = true }
ort                  = { workspace = true, features = ["ndarray"], optional = true }
ndarray              = { workspace = true, optional = true }
is-terminal          = { version = "0.4", optional = true }
hf-hub               = { workspace = true }
tokenizers           = { workspace = true }
tokio                = { workspace = true }
clap                 = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
toml                 = { workspace = true }
schemars             = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = { workspace = true }
thiserror            = { workspace = true }
uuid                 = { workspace = true }
regex                = { workspace = true }
walkdir              = { workspace = true }
sha2                 = { workspace = true }
quick-xml            = { workspace = true }
zip                  = { workspace = true }
futures              = { workspace = true }
argon2               = { workspace = true }
keyring              = { workspace = true }
windows-sys          = { workspace = true }
rusqlite             = { workspace = true }
rand                 = { workspace = true }
dirs                 = { workspace = true }
chrono               = { workspace = true }
csv                  = "1"
unicode-normalization = "0.1"
sysinfo              = "0.32"
tempfile             = "3"

# Legal RAG (Phase 1+2) — added 2026-05-23. Graph v0 uses the local SQLite
# backend in `legal::kg`; keep lance-graph out until a dedicated v1 backend.
once_cell            = "1"
hex                  = "0.4"
async-trait          = "0.1"
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
insta           = { version = "1", features = ["yaml"] }
criterion       = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest        = "1"

[[bin]]
name = "schema-gen"
path = "src/bin/schema_gen.rs"
required-features = ["generate-schema"]

[[bench]]
name = "bench_cold_start"
harness = false

[[bench]]
name = "bench_idle_rss"
harness = false

[[bench]]
name = "bench_search"
harness = false

[[bench]]
name = "bench_ingest"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_rerank"
harness = false
required-features = ["rerank"]

[[bench]]
name = "bench_rerank_eval"
harness = false
required-features = ["rerank"]

[[bench]]
name = "bench_memory_recall"
harness = false

[[bench]]
name = "legal_eval"
harness = false

[[test]]
name = "rerank_integration"
required-features = ["rerank"]

[[test]]
name = "rerank_smoke"
required-features = ["rerank"]

[[test]]
name = "e2e"
required-features = ["dev-integration"]

[[test]]
name = "ingest_scale"
required-features = ["dev-integration"]

[[test]]
name = "locomo_smoke"
required-features = ["dev-integration"]

[[test]]
name = "memory_proptest"
required-features = ["dev-integration"]

[lints]
workspace = true
