[package]
name = "anno-lib"
version = "0.6.0"
edition = "2021"
description = "NER, coreference resolution, relation extraction, PII detection, and zero-shot entity types"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/anno"
homepage = "https://github.com/arclabs561/anno"
documentation = "https://docs.rs/anno"
readme = "../../README.md"
keywords = ["ner", "nlp", "extraction", "coreference", "pii"]
categories = ["text-processing", "artificial-intelligence"]
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/LICENSE-*",
    "/README.md",
]

[lib]
name = "anno"

[dependencies]
anno-core = { path = "../anno-core", version = "0.6.0" }
anno-metrics = { path = "../anno-metrics", version = "0.6.0", optional = true }
textprep = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
ureq = { workspace = true, optional = true }
dirs = { workspace = true }

# ML
# `ort`'s ndarray interop is feature-gated in newer releases.
ort = { workspace = true, features = ["ndarray"], optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
lru = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }

# Semantic text chunking (optional). Uses the `text-splitter` crate, which
# is the de-facto standard Rust chunker (>1M downloads vs the local `slabs`).
text-splitter = { version = "0.28", optional = true }

# Utilities
itertools = { workspace = true }
rayon = { workspace = true, optional = true }

# Observability
tracing = { workspace = true, optional = true }


[dev-dependencies]
deformat = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
criterion = { workspace = true }

[features]
default = ["onnx"]
# Metrics-only analysis helpers (preferred for research / diagnostics).
analysis = ["dep:anno-metrics"]
discourse = []
schema = ["anno-core/schema"]
onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers", "dep:hf-hub", "dep:lru", "dep:safetensors"]
# Apple CoreML / Apple Neural Engine acceleration for ONNX backends.
# macOS only (the underlying ort/coreml feature requires macOS at link time).
# Set `OnnxSessionConfig::prefer_coreml = true` at session construction to
# attach the CoreML execution provider; falls back to CPU if CoreML can't
# load the graph (large models, unsupported ops).
onnx-coreml = ["onnx", "ort/coreml"]
candle = [
  "dep:candle-core",
  "dep:candle-nn",
  "dep:safetensors",
  "dep:tokenizers",
  "dep:hf-hub",
]
metal = ["candle", "candle-core/metal"]
cuda = ["candle", "candle-core/cuda"]
llm = ["dep:ureq"]
# Runtime-oriented infra toggles are intentionally collapsed to one feature to keep
# the public feature surface smaller and avoid "splintered" combinatorics.
production = [
  "dep:tracing",
]

# Bundled classical assets (opt-in).
#
# These features exist to prevent model assets from being embedded into binaries unless the
# caller explicitly enables them. This keeps default builds minimal and avoids surprising
# redistribution of large artifacts.
bundled-crf-weights = []
bundled-hmm-params = []

# Optional integration with `text-splitter` for sentence/grapheme-aware chunking.
chunking = ["dep:text-splitter"]

# Optional data-parallel batch extraction via rayon. When enabled,
# `Model::par_extract_batch` runs backend calls on rayon's thread pool.
parallel = ["dep:rayon"]

[[bench]]
name = "backends"
harness = false

[[bench]]
name = "coref"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
